Nav bar z-index issue fixed

--- a/static/home.css
+++ b/static/home.css
@@ -48,6 +48,7 @@ h2{
  right: 0;
  z-index: 10;                   /* ensure it stays on top of other elements */
  padding-top: 20px;             /* make sure the height is large enough */
+ padding-bottom: 40px;
  font-size: 28px !important;
  line-height: 6px !important;
  border-radius: 30px;
@@ -70,7 +71,7 @@ h2{
  position: relative;
  height: 30px;
  padding-top: 0px;               /* align the text in the center vertically */
- padding-bottom: 0px;
+ padding-bottom: 40px;
  margin-top: 40px;
  margin-left: 30px;
 }
@@ -226,7 +227,7 @@ h2{
  height: 57%;           
  top: 18%;
  left: 2%;
- z-index: 10;  
+ z-index: 9;  
 }
 
 .img-handshake{
